Remove JNR-POSIX dependency - FFM migration complete
Phase 6 of FFM migration: complete removal of JNR-POSIX dependency.

Changes:
- Remove jnr-posix from build.gradle and libs.versions.toml
- Simplify PosixLibrary.java (FFM only, no JNR-POSIX fallback)
- Remove --sun-misc-unsafe-memory-access flag from jperl/jperl.bat
- Update documentation to remove sun.misc.Unsafe references

All native POSIX calls now use Java Foreign Function & Memory (FFM) API:
- NativeUtils: getuid, geteuid, getgid, getegid, getpid, getppid
- Stat: stat, lstat with platform-specific struct layouts
- KillOperator: kill signal handling
- Operator: chmod file permissions
- FileTestOperator, DebugHooks: isatty terminal detection
- UmaskOperator: umask file creation mask
- IOOperator: fcntl file descriptor control
- UtimeOperator: utimes file timestamp modification
- WaitpidOperator: waitpid process management
- ExtendedNativeUtils: getpwnam, getpwuid, getpwent, setpwent, endpwent
- POSIX: strerror error messages

Benefits:
- No more sun.misc.Unsafe deprecation warnings on Java 24+
- Reduced dependency footprint
- Uses standard Java API (FFM finalized in Java 22)

Tested: All 122 unit tests pass.

Generated with [Devin](https://cli.devin.ai/docs)

Co-Authored-By: Devin <158243242+devin-ai-integration[bot]@users.noreply.github.com>